# shinden-pl-api-rs

./: Cargo.toml  LICENSE  README.md
src/: client.rs  episodes.rs  headers.rs  lib.rs  models.rs  player.rs  search.rs  user.rs  video.rs
