[package]
name = "shinden-pl-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cookie_store = "0.21.1"
dirs = "6.0.0"
reqwest = "0.12.22"
reqwest_cookie_store = "0.8.0"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = "1.46.1"
