[package]
name = "shinden-pl-api"
version = "0.1.0"
authors = ["Błażej Drozd"]
edition = "2024"

description = "A blazingly fast API client for Shinden.pl, written in Rust."
license = "MIT"
repository = "https://github.com/Tsugumik/shinden-pl-api-rs"
keywords = ["shinden", "api", "scraper", "anime", "rust"]
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
cookie_store = { version = "0.21.1", features = ["serde", "serde_json"] }
dirs = "6.0.0"
reqwest = { version = "0.12.22", features = ["brotli", "deflate", "gzip"] }
reqwest_cookie_store = { version = "0.8.0", features = ["serde"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.46.1"
